--- a/commerce.html
+++ b/commerce.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./course.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <title>Commerce</title>
+    <title>commerce</title>
 
 </head>
 <body>
