--- a/aboutUs.html
+++ b/aboutUs.html
@@ -105,6 +105,7 @@
           </ul>
           
         </div>
+        <p>about us provides you with the information to our project of excellent coaching</p>
       </div>
 
       <div class="container-fluid justify-content-end" >
